--- a/sofia_main.html
+++ b/sofia_main.html
@@ -9,8 +9,9 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="mysites.html"><b>мои лучшие работы</b></a>
-        <a class="link-nav" href="info.html"><b>бесполезная информация</b></a>
+        <a class="link-nav" href="margosha98.github.io/Sofia/sofia_my_sites.html"><b>мои лучшие работы</b></a>
+        <a class="link-nav" href="https://margosha98.github.io/sofia_useful_info.html"><b>бесполезная информация</b></a>
+         <a class="link-nav" href="https://margosha98.github.io/sofia_about_me.html"><b>обо мне</b></a>
       </nav>
       <h1>Web-sites<br/> недо-developer</h1>
       <p>Один сайт</p>
