--- a/Sofia/sofia_my_sites.html
+++ b/Sofia/sofia_my_sites.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="index.html">Главная</a>
+      <a class="link-header" href="https://margosha98.github.io/sofia_main.html">Главная</a>
     </header>
     <main>
       <h1>Мои сайты</h1>
