--- a/sofia_about_me.html
+++ b/sofia_about_me.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="">Главная</a>
+      <a class="link-header" href="https://margosha98.github.io/sofia_main.html">Главная</a>
     </header>
     <main>
       <h1>Скульдицкая Софья</h1>
