--- a/Matvey/matvey_useful_info.html
+++ b/Matvey/matvey_useful_info.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="index.html">Главная</a>
+      <a class="link-header" href="margosha98.github.io/Matvey/matvey_main.html">Главная</a>
     </header>
     <main>
       <h1>Полезная информация</h1>
