--- a/Misha/misha_main.html
+++ b/Misha/misha_main.html
@@ -9,8 +9,8 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="https://learn.algoritmika.az/lesson?lesson=6187&level=4&task=21818"><b>Mои лучшие работы</b></a>
-        <a class="link-nav" href="https://learn.algoritmika.az/lesson?lesson=6187&level=3&task=21818"><b> Обо мне</b></a>
+        <a class="link-nav" href="margosha98.github.io/Misha/misha_my_sytes.html"><b>Mои лучшие работы</b></a>
+        <a class="link-nav" href="margosha98.github.io/Misha/misha_about_me.html"><b> Обо мне</b></a>
       </nav>
     </main>
     <footer>
