--- a/Misha/misha_about_me.html
+++ b/Misha/misha_about_me.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="https://learn.algoritmika.az/lesson?lesson=6187&level=2&task=21818">Главная</a>
+      <a class="link-header" href="margosha98.github.io/Misha/misha_main.html">Главная</a>
          <a class="link-header" href="https://learn.algoritmika.az/lesson?lesson=6187&level=4&task=21818"><b>Mои лучшие работы</b></a>
     </header>
     <main>
