--- a/Misha/misha_my_sytes.html
+++ b/Misha/misha_my_sytes.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="https://learn.algoritmika.az/lesson?lesson=6187&level=2&task=21818">Главная</a>
-      <a class="link-header" href="https://learn.algoritmika.az/lesson?lesson=6187&level=3&task=21818">Обо мне</a>
+      <a class="link-header" href="margosha98.github.io/Misha/misha_main.html">Главная</a>
+      <a class="link-header" href="margosha98.github.io/Misha/misha_about_me.html">Обо мне</a>
     </header>
     <main>
       <h1>Мои сайты</h1>
