--- a/Olya/olya_about_me.html
+++ b/Olya/olya_about_me.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="index.html">Главная</a>
+      <a class="link-header" href="margosha98.github.io/Olya/olya_main.html">Главная</a>
     </header>
     <main>
       <h1>Персонажи</h1>
