--- a/Olya/olya_my_sites.html
+++ b/Olya/olya_my_sites.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="index.html">Главная</a>
+      <a class="link-header" href="margosha98.github.io/Olya/olya_main.html">Главная</a>
     </header>
     <main>
       <h1>Ссылки на важные сайты</h1>
