--- a/Matvey/matvey_main.html
+++ b/Matvey/matvey_main.html
@@ -9,7 +9,7 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="https://margosha98.github.io/Matvey/matvey_my_sites.html.html"><b>Мои лучшие работы!</b></a>
+        <a class="link-nav" href="https://margosha98.github.io/Matvey/matvey_my_sites.html"><b>Мои лучшие работы!</b></a>
         <a class="link-nav" href="https://margosha98.github.io/Matvey/matvey_matvey_useful_info.html"><b>Полезная информация.</b></a>
         <a class="link-nav" href="https://margosha98.github.io/Matvey/matvey_about_me.html"><b>Обо мне</b></a>
       </nav>
