--- a/Matvey/matvey_my_sites.html
+++ b/Matvey/matvey_my_sites.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="margosha98.github.io/Matvey/matvey_main.html">Главная</a>
+      <a class="link-header" href="matvey_main.html">Главная</a>
     </header>
     <main>
       <h1>Мои сайты</h1>
