--- a/Misha/misha_about_me.html
+++ b/Misha/misha_about_me.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="margosha98.github.io/Misha/misha_main.html">Главная</a>
-         <a class="link-header" href="https://learn.algoritmika.az/lesson?lesson=6187&level=4&task=21818"><b>Mои лучшие работы</b></a>
+      <a class="link-header" href="misha_main.html">Главная</a>
+         <a class="link-header" href="misha_my_sytes.html"><b>Mои лучшие работы</b></a>
     </header>
     <main>
       <h1>Прокопкин Михаил</h1>
