--- a/Olya/olya_main.html
+++ b/Olya/olya_main.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="margosha98.github.io/Olya/olya_about_me.html">Персонажи</a>
-      <a class="link-header" href="margosha98.github.io/Olya/olya_my_sites.html">Важные сайты</a>
-      <a class="link-header" href="margosha98.github.io/Olya/olya_useful_info.html">Полезная информация</a>
+      <a class="link-header" href="olya_about_me.html">Персонажи</a>
+      <a class="link-header" href="olya_my_sites.html">Важные сайты</a>
+      <a class="link-header" href="olya_useful_info.html">Полезная информация</a>
     </header>
     <main>
       <nav> 
