--- a/Sofia/sofia_about_me.html
+++ b/Sofia/sofia_about_me.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="margosha98.github.io/Sofia/sofia_main.html">Главная</a>
+      <a class="link-header" href="sofia_main.html">Главная</a>
     </header>
     <main>
       <h1>Мои сайты</h1>
