--- a/Sofia/sofia_useful_info.html
+++ b/Sofia/sofia_useful_info.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="index.html">Главная</a>
+      <a class="link-header" href="sofia_main.html">Главная</a>
     </header>
     <main>
       <h1>Бесполезная информация</h1>
