--- a/Misha/misha_about_me.html
+++ b/Misha/misha_about_me.html
@@ -6,7 +6,7 @@
   <body>
     <header>
       <a class="link-header" href="misha_main.html">Главная</a>
-         <a class="link-header" href="misha_my_sytes.html"><b>Mои лучшие работы</b></a>
+         <a class="link-header" href="misha_my_sites.html"><b>Mои лучшие работы</b></a>
     </header>
     <main>
       <h1>Прокопкин Михаил</h1>
