--- a/Danya/lego.html
+++ b/Danya/lego.html
@@ -1,6 +1,6 @@
 ﻿<html>
     <head>
-          <link rel="stylesheet" href="danya_article.css">
+          <link rel="stylesheet" href="article.css">
     </head>
     <header>
         <h2>Оригинальное LEGO KITAY WARS, детское</h2>
