--- a/Danya/tea.html
+++ b/Danya/tea.html
@@ -1,4 +1,7 @@
 ﻿<html>
+     <head>
+          <link rel="stylesheet" href="article.css">
+    </head>
     <header>
         <h2>Кухонные чайники,разноцветные из Китая</h2>
         </header>
