--- a/habbits-tracker/index.html
+++ b/habbits-tracker/index.html
@@ -13,17 +13,16 @@
   </head>
   <body>
     <div class="app">
-      <div class="panel">
+      <aside class="panel">
         <img class="logo" src="./src/logo3.png" alt="Logo Habbit"></img>
         <p class="main-title">HabbIt</p>
         <nav class="menu">
           <div class="menu__list"> </div>
           <div> <button class="menu__add" onclick="togglePopup(true)"> <img src="./src/Add.svg" /></button></div>
         </nav>
-    
-      </div>
+      </aside>
 
-      <div  class="content">
+      <main  class="content">
         <header class="header">  
           <h1 class="header__title">Использование трекера</h1>
           <div class="progress">
@@ -37,7 +36,7 @@
           </div>
         </header>
 
-        <main>
+        <section>
           <div class="days-container"></div>
           <div class="habbit">
             <div class="habbit__day"></div>
@@ -47,9 +46,9 @@
                   <button class="ready__button" type="submit">Готово</button>
                 </form>
           </div>
-        </main>
+        </section>
 
-        <div class="start-display">
+        <section class="start-display">
           <ol class="list">
             <li class="list__element">Открой окно добавления привычки
               <img class="start-display__arrow start-display__arrow_first" src="./src/arrow.png" />
@@ -60,10 +59,10 @@
               <img class="popup_image" src="./src/habbit-image.png"/>
             <li class="list__element">Следи за прогрессом с помощью панели в правом верхнем углу</li>
           </ol>
-        </div>
+        </section>
 
 
-        <div class="case">
+        <section class="case">
           <div class="popup">
             <div class="popup__header">
               <h1 class="popup__title">Новая привычка</h1>
@@ -83,11 +82,11 @@
               <button class="ready__button popup__ready-button" type="submit">Добавить</button>
             </form>
           </div>
-        </div>
+        </section>
 
       </div>
 
-    </div>
+    </main>
     <script src="./data/scripts/app.js"></script>
   </body>
 </html>
