--- a/habbits-tracker/index.html
+++ b/habbits-tracker/index.html
@@ -36,7 +36,7 @@
           </div>
         </header>
 
-        <section>
+        <section class="habbits-container">
           <div class="days-container"></div>
           <div class="habbit">
             <div class="habbit__day"></div>
