--- a/masshtab/index.html
+++ b/masshtab/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class='box'>
+    <div class='box touch'>
         <svg id="svg" class="svg" viewBox="0 0 600 600" preserveAspectRatio="xMidYMid meet">
         <g id="viewport">
             <rect class="svg-background" x="0" y="0" width="300" height="300" />
